docs: documentarion for delete
