# docs/swagger.json
@@ -51,20 +51,18 @@
                 "summary": "Delete lead",
                 "parameters": [
                     {
-                        "description": "Request body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.CreateLeadRequest"
-                        }
+                        "type": "string",
+                        "description": "Lead id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handler.CreateLeadResponse"
+                            "$ref": "#/definitions/handler.DeleteLeadResponse"
                         }
                     }
                 }
@@ -93,6 +91,17 @@
             }
         },
         "handler.CreateLeadResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/schemas.LeadRespose"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.DeleteLeadResponse": {
             "type": "object",
             "properties": {
                 "data": {
